# NeditVST

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
NeditVST/: NeditVST.jucer
Source/: GranularStretcher.cpp  GranularStretcher.h  PlaybackStyleGrid.cpp  PlaybackStyleGrid.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SequencerGrid.cpp  SequencerGrid.h  SubdivisionProbabilityGrid.cpp  SubdivisionProbabilityGrid.h  TransientDetector.cpp  TransientDetector.h  WaveformDisplay.cpp  WaveformDisplay.h
docs/: bugfix-editor-reopen-sigsegv.md  logging-system.md
